1 hour in and its going well

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </div>
 
       <div class="grid">
-        <div class="grid__card">
+        <!-- <div class="grid__card">
           <div class="grid__card__flag">
             <img src="" alt="flag" />
           </div>
@@ -88,7 +88,7 @@
         <div class="grid__card"></div>
         <div class="grid__card"></div>
         <div class="grid__card"></div>
-        <div class="grid__card"></div>
+        <div class="grid__card"></div> -->
       </div>
     </div>
   </body>
