--- a/index.html
+++ b/index.html
@@ -55,25 +55,23 @@
               />
             </svg>
           </button>
-          <button
-            class="search__sort-option search__sort-option-border-top hidden"
-            value="africa"
-          >
-            Africa
-          </button>
-          <button class="search__sort-option hidden" value="america">
-            America
-          </button>
-          <button class="search__sort-option hidden" value="asia">Asia</button>
-          <button class="search__sort-option hidden" value="europe">
-            Europe
-          </button>
-          <button
-            class="search__sort-option search__sort-option-border-bottom hidden"
-            value="oceania"
-          >
-            Oceania
-          </button>
+          <div class="search__sort-box">
+            <button class="search__sort-box-option hidden" value="africa">
+              Africa
+            </button>
+            <button class="search__sort-box-option hidden" value="america">
+              America
+            </button>
+            <button class="search__sort-box-option hidden" value="asia">
+              Asia
+            </button>
+            <button class="search__sort-box-option hidden" value="europe">
+              Europe
+            </button>
+            <button class="search__sort-box-option hidden" value="oceania">
+              Oceania
+            </button>
+          </div>
         </div>
       </div>
 
