--- a/country-details.html
+++ b/country-details.html
@@ -40,34 +40,7 @@
         </button>
       </a>
 
-      <div class="section">
-        <div class="section__left">
-          <img src="" alt="" />
-        </div>
-        <div class="section__right">
-          <div class="right__title">Lorem ipsum</div>
-          <div class="right__box">
-            <div class="right__box-info">Native Name: <span>ipsum</span></div>
-            <div class="right__box-info">Poplation: <span>ipsum</span></div>
-            <div class="right__box-info">Region: <span>ipsum</span></div>
-            <div class="right__box-info">Sub Region: <span>ipsum</span></div>
-            <div class="right__box-info">Capital: <span>ipsum</span></div>
-            <div class="right__box-info">
-              Top Level Domain: <span>ipsum</span>
-            </div>
-            <div class="right__box-info">Currencies: <span>ipsum</span></div>
-            <div class="right__box-info">Languages: <span>ipsum</span></div>
-          </div>
-          <div class="right__box-border">
-            <div class="right__box-border__text">
-              Border Countries:
-              <div class="right__box-border__text__countries">Lorem</div>
-              <div class="right__box-border__text__countries">Lorem</div>
-              <div class="right__box-border__text__countries">Lorem</div>
-            </div>
-          </div>
-        </div>
-      </div>
+      <div class="section"></div>
     </div>
   </body>
 </html>
